--- a/Files/assets/css/style.css
+++ b/Files/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
 
     font-family: 'poppins', sans-serif;
-    background-color: #dbe9a4;
+    background-color: #e7efc7;
     margin: 30;
     padding: 0;
     text-align: center;
